@@ -28,11 +28,18 @@ class CScreenTriggersOverview extends CScreenBase {
 	 */
 	public function get() {
 		$hostids = array();
-		$dbHostGroups = DBselect('SELECT DISTINCT hg.hostid FROM hosts_groups hg WHERE hg.groupid='.zbx_dbstr($this->screenitem['resourceid']));
+
+		$dbHostGroups = DBselect(
+			'SELECT DISTINCT hg.hostid'.
+			' FROM hosts_groups hg'.
+			' WHERE hg.groupid='.zbx_dbstr($this->screenitem['resourceid'])
+		);
 		while ($dbHostGroup = DBfetch($dbHostGroups)) {
 			$hostids[$dbHostGroup['hostid']] = $dbHostGroup['hostid'];
 		}
 
-		return $this->getOutput(getTriggersOverview($hostids, $this->screenitem['application'], $this->screenitem['style'], $this->screenid));
+		return $this->getOutput(getTriggersOverview($hostids, $this->screenitem['application'],
+				$this->pageFile, $this->screenitem['style'], $this->screenid
+		));
 	}
 }
