@@ -7,6 +7,7 @@ New features:
 ..F.I..... [ZBXNEXT-715] increased the size of sysmaps_elements.label and sysmaps_links.label fields to 2048 characters (Sasha)
 
 Bug fixes:
+..F....... [ZBX-7260] fixed "Wrong RPC call to JS RPC" error when acknowledging trigger and changing group or host in screen element (Ivo)
 ..F....... [ZBX-6129] fixed changing the status of triggers and trigger prototype working incorrectly if they no longer exist (Pavels)
 ..F....... [ZBX-7266] fixed frontend big dropdowns displaying (Eduard)
 ..F....... [ZBX-7248] fixed frontend initial calendar time (Eduard)
